# gha_jira_sync

./: pyproject.toml  tox.ini
.github/workflows/: release.yml
scripts/: generate_release_notes.py
