[project]
name = "gha-jira-sync"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "gitpython>=3.1.45",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "toml>=0.10.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
    "tox-uv>=1.28.0",
]


[project.scripts]
tickets = "scripts.generate_release_notes:draft_release_notes"
